<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:theme="@style/ThemeOverlay.AppCompat.Light"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:src="@drawable/ic_person_outline_black_24dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/drawer_header_button_margin"
        android:layout_marginEnd="@dimen/drawer_header_button_margin"
        android:id="@+id/personIcon"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:id="@+id/loginOrUserName"
        android:text="@string/log_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_toRightOf="@+id/personIcon"
        android:layout_toEndOf="@+id/personIcon"
        android:ellipsize="end"
        android:singleLine="true" />

    <ImageButton
        android:layout_width="@dimen/drawer_header_button_width"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/drawer_header_button_margin"
        android:focusable="true"
        android:id="@+id/logInOrOut"
        android:contentDescription="@string/cd_login_or_logout"
        android:layout_toLeftOf="@+id/drawerSettings"
        android:layout_toStartOf="@+id/drawerSettings"
        android:src="@drawable/login"
        style="?android:attr/borderlessButtonStyle"
        android:onClick="onLogInOrOutButtonPressed"/>

    <ImageButton
        android:layout_width="@dimen/drawer_header_button_width"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/drawer_header_button_margin"
        android:id="@+id/drawerSettings"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:focusable="true"
        android:contentDescription="@string/cd_drawer_menu"
        android:src="@drawable/ic_more_vert_black_24dp"
        style="?android:attr/borderlessButtonStyle"
        android:onClick="onDrawerSettingsButtonPressed"/>

</RelativeLayout>
